# rc_agent

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  package.xml  robot.cfg.in  rosdoc2.yaml
config/: CMakeLists.txt  configprocessor.cpp  configprocessor.h
docs/html/: graph_legend.html  index.html  md_API.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_1.js  files_0.js  pages_0.js  search.css  searchdata.js
docs/man/man/: md_API.3
launch/: rc_agent.launch.py
modules/basecontrol/: basecontrol.cpp  basecontrol.h
modules/battery/: battery_state_adapter.h  battery_state_handler.cpp  battery_state_handler.h  battery_state_node.cpp  battery_state_node.h
modules/map/: map_node.cpp  map_node.h
modules/nav2/: nav_command.cpp  nav_command.h  robot_navigator.cpp  robot_navigator.h  robot_navigator_conversions.h  robot_navigator_handler.cpp  robot_navigator_handler.h
network/: CMakeLists.txt  arper.cpp  arper.h  client.cpp  client.h  networkcontroller.cpp  networkcontroller.h  server.cpp  server.h
network/protobuf/: CMakeLists.txt  base.proto  credentials.proto  drives.proto  grpc.cmake  grpc_common.cmake  imu.proto  map.proto  navigation.proto  power.proto  robot.proto  video.proto
params/: basecontrol.yaml  gscam2.yaml  gst_pipeline.yaml
system/: CMakeLists.txt  shell.cpp  shell.h  system.cpp  system.h  systeminfo.cpp  systeminfo.h
test/: CMakeLists.txt  test_basecontrol.cpp  test_robot_navigator.cpp
test/unit_tests/: CMakeLists.txt  config_unit_tests.cpp  timer_test.cpp
topics/battery/: battery_state_handler.cpp  battery_state_handler.h  battery_state_node.cpp  battery_state_node.h
