<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_agent</name>
  <version>1.0.0</version>
  <description>
    Remote control node for interaction with AmurCore
  </description> 

  <maintainer email="radtarasov@gmail.com">Radomir Tarasov</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/ARDev1161/rc_agent</url>
  <author email="radtarasov@gmail.com">Radomir Tarasov</author>

  <!-- Generic dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>boost</depend>

  <!-- Build dependencies -->

  <!-- Execution dependencies -->
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
